--- a/selfie.html
+++ b/selfie.html
@@ -10,7 +10,7 @@
 </style>
 </head>
 <body>
-	<a href="itms-services://?action=download-manifest&url=https://dl.dropboxusercontent.com/s/grbgz03xw8kj11t/selfie.plist" class="app_download">download</a>
+	<a href="itms-services://?action=download-manifest&url=https://github.com/NikeGoon/selfie/blob/master/selfie.plist" class="app_download">download</a>
 </body>
 </html>
 
